--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.4",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "vite-plugin-html-env": "^1.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "vite": "^3.1.0",
-    "vite-plugin-html-env": "^1.2.7"
+    "vite": "^3.1.0"
   }
 }
