--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "firebase": "^9.11.0",
     "localtunnel": "^2.0.2",
+    "netlify-cli": "^12.0.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-kakao-maps-sdk": "^1.1.4",
     "react-router-dom": "^6.4.1",
     "vite-plugin-html-env": "^1.2.7"
